fix: remove modal z-index for testing

--- a/src/assets/styles/purchase-modal.css
+++ b/src/assets/styles/purchase-modal.css
@@ -36,14 +36,14 @@ label {
 /* Modal window, purchase cart & form*/
 
 .modal {
-  position: fixed;
+/*  position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: var(--shadow);
+  background-color: var(--shadow); */
 }
 
 .modal-content {
